--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@next/font": "^14.2.15",
     "next": "15.2.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
